Tweaking favorites section

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 	</div>
 	<div class="container-fluid callout-container">
 		<!-- Callout -->
-        <div class="opaque-overlay">&nbsp;</div>
-        <div class="row">
+		<div class="opaque-overlay">&nbsp;</div>
+		<div class="row">
 			<div class="col-12">
 				<section class="callout jumbotron text-center">
 					<h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
@@ -129,13 +129,13 @@
 	</div>
 
 	<!-- Features -->
-    <div class="container-wrapper container-wrapper--red">
+	<div class="container-wrapper container-wrapper--red">
 		<div class="container features-container content-container">
 			<section class="features">
 				<div class="row">
 					<div class="col-12 page-header">
 						<h2 class="text-uppercase">Features:</h2>
-                        <hr class="block-divider block-divider--short block-divider--white">
+						<hr class="block-divider block-divider--short block-divider--white">
 					</div>
 				</div>
 				<div class="row">
@@ -181,50 +181,56 @@
 
 
 	<!-- Favorites -->
-	<section class="features">
-		<h2 class="text-uppercase">Monthly Favorites</h2>
-            <hr class="block-divider block-divider--short block-divider--white">
+	<div class="container-wrapper container-wrapper--black">
+		<div class="container features-container content-container">
+			<section class="favorites">
+				<h2 class="text-uppercase">Monthly Favorites</h2>
+				<hr class="block-divider block-divider--short block-divider--white">
 
-		<div class="feature">
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th scope="col">#</th>
-						<th scope="col">Name</th>
-						<th scope="col">Origin</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th scope="row">1</th>
-						<td>A</td>
-						<td>1</td>
-					</tr>
-					<tr>
-						<th scope="row">2</th>
-						<td>B</td>
-						<td>2</td>
-					</tr>
-					<tr>
-						<th scope="row">3</th>
-						<td>C</td>
-						<td>3</td>
-					</tr>
-					<tr>
-						<th scope="row">4</th>
-						<td>D</td>
-						<td>4</td>
-					</tr>
-					<tr>
-						<th scope="row">5</th>
-						<td>E</td>
-						<td>5</td>
-					</tr>
+				<div class="favorites">
+					<table class="table table-striped table-dark">
+						<thead>
+							<tr>
+								<th scope="col">Rank</th>
+								<th scope="col">Name</th>
+								<th scope="col">Origin</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th scope="row">1</th>
+								<td>A</td>
+								<td>1</td>
+							</tr>
+							<tr>
+								<th scope="row">2</th>
+								<td>B</td>
+								<td>2</td>
+							</tr>
+							<tr>
+								<th scope="row">3</th>
+								<td>C</td>
+								<td>3</td>
+							</tr>
+							<tr>
+								<th scope="row">4</th>
+								<td>D</td>
+								<td>4</td>
+							</tr>
+							<tr>
+								<th scope="row">5</th>
+								<td>E</td>
+								<td>5</td>
+							</tr>
 
-				</tbody>
-			</table>
+						</tbody>
+					</table>
+				</div>
+			</section>
 		</div>
-	</section>
+	</div>
+
+
 	<!-- /.favorites -->
 
 	<div class="modal" tabindex="-1" role="dialog" id="signUpModal">
