added whsikey icon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link href="css/addons/flag.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -184,7 +186,8 @@
 	<div class="container-wrapper container-wrapper--black">
 		<div class="container features-container content-container">
 			<section class="favorites">
-				<h2 class="text-uppercase">Monthly Favorites</h2>
+				<h2 class="text-uppercase"><i class="fas fa-glass-whiskey d-none d-sm-block"></i>
+                Monthly Favorites</h2>
 				<hr class="block-divider block-divider--short block-divider--white">
 
 				<div class="favorites">
@@ -199,28 +202,28 @@
 						<tbody>
 							<tr>
 								<th scope="row">1</th>
-								<td>A</td>
-								<td>1</td>
+								<td>Speyburn</td>
+								<td>Scotland</td>
 							</tr>
 							<tr>
 								<th scope="row">2</th>
-								<td>B</td>
-								<td>2</td>
+								<td>Glen Moray</td>
+								<td>Scotland</td>
 							</tr>
 							<tr>
 								<th scope="row">3</th>
-								<td>C</td>
-								<td>3</td>
+								<td>Clonakilty</td>
+								<td>Ireland</td>
 							</tr>
 							<tr>
 								<th scope="row">4</th>
-								<td>D</td>
-								<td>4</td>
+								<td>Laphroaig</td>
+								<td>Scotland</td>
 							</tr>
 							<tr>
 								<th scope="row">5</th>
-								<td>E</td>
-								<td>5</td>
+								<td>Teeling</td>
+								<td>Ireland</td>
 							</tr>
 
 						</tbody>
@@ -232,6 +235,8 @@
 
 
 	<!-- /.favorites -->
+
+    <!-- Modal Signup -->
 
 	<div class="modal" tabindex="-1" role="dialog" id="signUpModal">
 		<div class="modal-dialog" role="document">
@@ -274,6 +279,9 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
 		integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
 	</script>
+
+<!-- /.modal -->
+
 </body>
 
 </html>
